--- a/src/componentsMain/summary.css
+++ b/src/componentsMain/summary.css
@@ -2,7 +2,6 @@ textarea{
  word-break: break-word;
  resize:both;
  border-color: #adb5bd;
- margin-top:10px;
  padding:16px;
 
 }
@@ -14,8 +13,8 @@ textarea{
 }
 .summaryarea h1{
     box-sizing:border-box;
-    border-bottom:1px solid rgb(194, 192, 192);
     padding-bottom:10px;
+    border-bottom:1px solid rgb(194, 192, 192);
 }
 .anchor { 
     content: ''; 
@@ -24,6 +23,9 @@ textarea{
     width: 0; 
     height: 60px; 
     margin-top: -60px
+}
+.question{
+    margin-top:10px;
 }
 
 
