--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -138,3 +138,18 @@ html{
     width:25px;
     height:25px;
 }
+
+.login{
+  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  width:230px;
+}
+.login h1{
+  font-size:30px;
+}
+.login .navLink{
+  background-color:antiquewhite;
+  text-decoration: none;
+  color:black;
+  border-radius:4px;
+  border:1px solid rgb(222, 226, 230);
+}
