--- a/src/styles/summaryMain.css
+++ b/src/styles/summaryMain.css
@@ -27,6 +27,15 @@ textarea{
 .question{
     margin-top:10px;
 }
+.records{
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right:5px;
+    background-color: #d7e8fa;
+    padding: 5px;
+    border: 1px solid #d0caca;
+    border-radius: 4px;
+}
 
 
 
