--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -12,18 +12,31 @@ html{
   display:flex;
   flex-direction:row;
   align-items:center;
-  justify-content:center;
+  justify-content:space-around;
 }
 
 #loginform{
   max-width: 500px;
   min-width: 300px;
   max-height: 700px;
-  width: 30%;
+  width: 32%;
   height: 100vh;
-  margin: 100px auto;
+  margin-left:20%;
+  margin-right:auto;
   background-color: #FFFFFF;
   border-radius: 25px;
+}
+
+#registerform{
+  position:fixed;
+  right:0;
+  top:0;
+  max-width: 500px;
+  min-width: 300px;
+  max-height: 700px;
+  width: 25%;
+  height: 100vh;
+  background-color: #FFFFFF;
 }
 
 #headerTitle{
@@ -33,6 +46,10 @@ html{
   margin: 0;
   font-size: 2rem;
 }
+
+#registerform #headerTitle{
+  font-size: 25px;
+} 
 
 .row{
   display: flex;
@@ -98,28 +115,28 @@ html{
   padding-bottom: 1.5rem;
 }
 
-#facebookIcon{
-  /* background-image: url("https://image.flaticon.com/icons/svg/145/145802.svg");
-  background-repeat: no-repeat; */
+/* #facebookIcon{
+  background-image: url("https://image.flaticon.com/icons/svg/145/145802.svg");
+  background-repeat: no-repeat;
   width: 3rem;
   height: 3rem;
 }
 
 #twitterIcon{
-  /* background-image: url("https://image.flaticon.com/icons/svg/145/145812.svg");
-  background-repeat: no-repeat; */
+  background-image: url("https://image.flaticon.com/icons/svg/145/145812.svg");
+  background-repeat: no-repeat;
   width: 3rem;
   height: 3rem;
 }
 
 #googleIcon{
-  /* background-image: url("https://image.flaticon.com/icons/svg/145/145804.svg");
-  background-repeat: no-repeat; */
+  background-image: url("https://image.flaticon.com/icons/svg/145/145804.svg");
+  background-repeat: no-repeat;
   width: 3rem;
   height: 3rem;
-}
+} */
 
-#iconGroup{
+/* #iconGroup{
   display: flex;
   justify-content: center;
   padding: 2rem 0;
@@ -137,11 +154,15 @@ html{
 .logoFacebook, .logoTwitter, .logoGoogle{
     width:25px;
     height:25px;
-}
+} */
 
 .login{
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   width:230px;
+  width:auto;
+  text-align:center;
+  padding-top:0;
+  margin-left:0;
 }
 .login h1{
   font-size:30px;
@@ -151,5 +172,6 @@ html{
   text-decoration: none;
   color:black;
   border-radius:4px;
+  width:150px;
   border:1px solid rgb(222, 226, 230);
 }
