--- a/src/styles/expenseBody.css
+++ b/src/styles/expenseBody.css
@@ -1,6 +1,7 @@
 .contentWrapper{
-    margin:40px;
-    width:calc(100vw - 80px);
+    margin-left:75px;
+    margin-right:75px;
+    width:calc(100vw - 150px);
     font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     margin-bottom:60px;
 }
