--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -175,3 +175,16 @@ html{
   width:150px;
   border:1px solid rgb(222, 226, 230);
 }
+.passwordReq{
+  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size:15px;
+  background-color:#d8ebf9;
+  border:1px solid rgb(174, 174, 174);
+  border-radius:10px;
+  padding:10px;
+  position:fixed;
+  right:26%;
+  top:38vh;
+  width:225px;
+  font-weight:500;
+}
