--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -10,7 +10,8 @@
 .box{
     position:relative;
     width:50%;
-    min-height:300px;
+    min-height:60%;
+    max-height:85%;
     background-color:#daebfa;
     border:1px solid #999;
     border-radius:4px;
