summary section ui changes

--- a/src/styles/infoContent.css
+++ b/src/styles/infoContent.css
@@ -29,6 +29,7 @@ textarea{
     flex-direction:column;
     border-radius:4px;
     padding:24px;
+    padding-top:12px
 }
 .addNew input{
     width:100%;
