--- a/src/styles/summaryMain.css
+++ b/src/styles/summaryMain.css
@@ -24,19 +24,38 @@ textarea{
     height: 60px; 
     margin-top: -60px
 }
-.question{
-    margin-top:10px;
+.summaryTop{
+    display:flex;
 }
-.records{
+.summaryBottom{
+    display:flex;
+}
+.question{
+    width:48%;
     margin-top: 5px;
     margin-left: 5px;
     margin-right:5px;
+    margin-bottom:3px;
     background-color: #d7e8fa;
     padding: 5px;
     border: 1px solid #d0caca;
-    border-radius: 4px;
+    border-radius: 8px;
 }
-.figures{
+.question .records{
+   margin-top:5px;
+   margin-bottom:5px;
+   font-size: 16px;
+   font-weight: 500;
+}
+.question span{
+    word-break: break-word;
+}
+.summaryarea .editSummary{
+    width:158px;
+    margin-top:6px;
+    margin-left:5px;
+}
+/* .figures{
     margin-top: 5px;
     margin-left: 5px;
     margin-right:5px;
@@ -44,6 +63,6 @@ textarea{
     border: 1px solid #d0caca;
     border-radius: 4px;
     background-color:#faf2d7
-}
+} */
 
 
