summary ui chanegs

--- a/src/styles/summaryMain.css
+++ b/src/styles/summaryMain.css
@@ -55,7 +55,7 @@ textarea{
     margin-top:6px;
     margin-left:5px;
 }
-/* .figures{
+.figures{
     margin-top: 5px;
     margin-left: 5px;
     margin-right:5px;
@@ -63,6 +63,6 @@ textarea{
     border: 1px solid #d0caca;
     border-radius: 4px;
     background-color:#faf2d7
-} */
+}
 
 
